--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "postcss-load-config": "^4.0.1",
     "postcss-preset-env": "^7.4.3",
     "read-cache": "^1.0.0"
+  },
+  "dependencies": {
+    "@justinribeiro/lite-youtube": "^1.5.0"
   }
 }
