--- a/src/_data/social.yml
+++ b/src/_data/social.yml
@@ -1,3 +1,3 @@
 - title: GitHub
   url: https://github.com/Ikass/bridgetown-excellent
-  icon: /images/icons/social-github.svg
+  icon: github-line.svg
