--- a/src/_data/social.yml
+++ b/src/_data/social.yml
@@ -1,3 +1,18 @@
 - title: GitHub
   url: https://github.com/Ikass/bridgetown-excellent
   icon: github-line.svg
+- title: LinkedIn
+  url: https://example.com
+  icon: linkedin-line.svg
+- title: Pinterest
+  url: https://example.com
+  icon: pinterest-line.svg
+- title: Twitter
+  url: https://example.com
+  icon: twitter-x-line.svg
+- title: Ko-Fi
+  url: https://example.com
+  icon: ko-fi-line.svg
+- title: RSS
+  url: https://example.com
+  icon: rss-line.svg
