feat: first attempt at inlined SVG icons

--- a/src/_data/social.yml
+++ b/src/_data/social.yml
@@ -2,17 +2,17 @@
   url: https://github.com/Ikass/bridgetown-excellent
   icon: github-line.svg
 - title: LinkedIn
-  url: https://example.com
+  url: https://github.com/Ikass/bridgetown-excellent
   icon: linkedin-line.svg
 - title: Pinterest
-  url: https://example.com
+  url: https://github.com/Ikass/bridgetown-excellent
   icon: pinterest-line.svg
 - title: Twitter
-  url: https://example.com
+  url: https://github.com/Ikass/bridgetown-excellent
   icon: twitter-x-line.svg
 - title: Ko-Fi
-  url: https://example.com
+  url: https://github.com/Ikass/bridgetown-excellent
   icon: ko-fi-line.svg
 - title: RSS
-  url: https://example.com
+  url: https://github.com/Ikass/bridgetown-excellent
   icon: rss-line.svg
