--- a/src/_data/site_metadata.yml
+++ b/src/_data/site_metadata.yml
@@ -5,7 +5,7 @@
 # in the templates via {{ site.metadata.myvariable }}.
 
 title: Bridgetown Rise
-tagline: Bridgetown boilerplate.
+tagline: Bridgetown starter kit.
 email: your-email@example.com
 description: >-
   Bridgetown starter using modern vanilla CSS, fluid type, fluid spacing, flexible layout and progressive enhancement. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
