tweak some styles

--- a/src/_posts/_defaults.yml
+++ b/src/_posts/_defaults.yml
@@ -1,4 +1,5 @@
 ---
 layout: post
-image: 'https://placehold.co/778x438?text=Hello+Ruby' 
+image: stylized-illustration-ruby-desk-laptop
+image_alt: Red ruby gemstone on wooden desk next to laptop with code in background
 ---
